--- a/index.html
+++ b/index.html
@@ -7,14 +7,46 @@
     <title>Dashboard</title>
 </head>
 <body>
-
     <!--side bar-->
-    <nav></nav>
-
-    <div class="content">
+    <nav>
+        <img src="meteoswiss-svgrepo-com.png" alt="icone" id="logo" class="logo">
+        <div class="link">
+            <hr>
+            <h2>Accueil</h2>
+            <hr>
+            <ul>
+                <li><a href="https://github.com/pj43svh/MA-Metier-Station-Meteo">Github</a></li>
+                <li><a href="https://cpnv.ch">Cpnv</a></li>
+                <li><a href="https://trello.com/b/mbKZJSjJ/station-m%C3%A9t%C3%A9o-esp32-rpi">Trello</a></li>  
+            </ul>
+            <hr>
+        </div>
+    </nav>
+    <div>
         <h1>DASHBOARD</h1>
-        
+
+        <div class="content">
+
+            <div class="donnee" id="temperature">
+                <h2>Température :</h2>
+                <p id="temperature">-2 °C</p>
+            </div>
+            
+            <div class="donnee"id="vent">
+                <h1></h1>
+                <h2>vitesse du vent :</h2>
+                <p id="vitesse_vent">5 km/h</p>
+                <h2>direction :</h2>
+                <p id="direction_vent">NE 30°</p>
+            </div>
+
+            <div class="donnee" id="graphique_pluie">
+                <h2>Taux de pluie :</h2>
+                <div id="graf_pluie"></div>
+            </div>
+        </div>
     </div>
+
 
 
 </body>
