--- a/statistique.html
+++ b/statistique.html
@@ -33,28 +33,25 @@
             <hr>
         </div>
     </nav>
-                <div>
-                    <h1>DASHBOARD</h1>
+    <!--side bar-->
+    <div>
+        <h1>Statistique</h1>
 
-                    <div class="content">
+        <div class="content">
 
-                        <div class="donnee" id="temperature">
-                            <h2>Température :</h2>
-                            <p id="temperature">-2 °C</p>
-                        </div>
+            <div class="card" id="graphique_pluie">
+                <h2>Taux de pluie :</h2>
+                <div id="graf_pluie" class="graf"></div>
+            </div>
 
-                        <div class="donnee" id="vent">
-                            <h1></h1>
-                            <h2>vitesse du vent :</h2>
-                            <p id="vitesse_vent">5 km/h</p>
-                            <h2>direction :</h2>
-                            <p id="direction_vent">NE 30°</p>
-
-
-                        </div>
-                    </div>
+                <div class="card" id="graphique_temp">
+                    <h2>Température :</h2>
+                    <div id="graphique_temp" class="graf"></div>
                 </div>
 
+
+        </div>
+    </div>
 
 
 
