Add navigation links to 'Accueil' and improve styling for better user experience

--- a/historique.html
+++ b/historique.html
@@ -14,7 +14,7 @@
         <img src="meteoswiss-svgrepo-com.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <h2>Accueil</h2>
+            <a href="index.html"><h2>Accueil</h2></a>
             <hr>
             <ul>
                 <li><a href="/index.html">Données</a></li>
@@ -44,16 +44,15 @@
                             <th>Humidité (%)</th>
                             <th>Pression (hPa)</th>
                         </tr>
+                    </thead>
+                    <tbody id="history-body">
                         <tr>
                             <th>12.01.2026</th>
                             <th>08:00</th>
                             <th>-4 °C</th>
-                            <th>12 (%)</th>
-                            <th>1015 (hPa)</th>
+                            <th>12 %</th>
+                            <th>1015 hPa</th>
                         </tr>
-                    </thead>
-                    <tbody id="history-body">
-
                     </tbody>
                 </table>
             </div>
