--- a/statistique.html
+++ b/statistique.html
@@ -16,7 +16,7 @@
         <img src="meteoswiss-svgrepo-com.png" alt="icone" id="logo" class="logo">
         <div class="link">
             <hr>
-            <h2>Accueil</h2>
+            <a href="index.html"><h2>Accueil</h2></a>
             <hr>
             <ul>
                 <li><a href="/index.html">Données</a></li>
