--- a/historique.html
+++ b/historique.html
@@ -17,10 +17,10 @@
             <a href="index.html"><h2>Accueil</h2></a>
             <hr>
             <ul>
-                <li><a href="/index.html">Données</a></li>
-                <li><a href="/a_propos.html">À propos</a></li>
-                <li><a href="/a_propos.html">Statistique</a></li>
-                <li><a href="/historique.html">Historique</a></li>
+                <li><a href="index.html">Données</a></li>
+                <li><a href="a_propos.html">À propos</a></li>
+                <li><a href="a_propos.html">Statistique</a></li>
+                <li><a href="historique.html">Historique</a></li>
             </ul>
             <hr>
             <ul>
